src/_styles.scss
/* purgecss start ignore */
// VENDOR IMPORTS
@import "./node_modules/minireset.css/minireset.min";

// POWER OPERATOR FOR SCALES
@import "tools/math.tool";

// SETTINGS
@import "settings/settings";

// IMPORT TOOLS
@import "tools/responsive.tool";
@import "tools/utilities.tool";
@import "tools/vendor.tool";
@import "tools/visibility.tool";

// SET UP DESIGN TOKENS AS CSS VARIABLES
@import "tokens/color.tokens";
@import "tokens/spacing.tokens";
@import "tokens/typography.tokens";

// BASE STYLES
@import "globals/base.globals";
@if $globals--print-reset {
  @import "globals/print.globals";
}
/* purgecss end ignore */

// OBJECTS
@import "objects/auto-grid.object";
@import "objects/box.object";
@import "objects/cluster.object";
@import "objects/cover.object";
@import "objects/frame.object";
@import "objects/grid.object";
@import "objects/media.object";
@import "objects/pack.object";
@import "objects/site.object";
@import "objects/stack.object";
@import "objects/wrapper.object";

// UTILITIES
@import "utilities/a11y.utility";

@if $utilities--generate {
  @include generate-utilities;
}

